fixed mobile issue overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,7 @@ body {
 
 section {
     height: 800px;
+    margin-bottom: 100px;
 }
 
 .messageBackground {
